<resources>
    <string name="app_name">"TaskiMatti "</string>
    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_routines">Routines</string>
    <string name="action_sign_out">Sign out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_required_short">Required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_test">Test</string>
    <string name="google_login_test">126495685533-kcj8i714tfnfns0dj0hee6ldhs62chf2.apps.googleusercontent.com</string>
    <string name="title_activity_create_routine">CreateRoutineActivity</string>
    <string name="title_activity_create_routine_test">Settings</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="action_verification_sent">Verification email sent to</string>
    <string name="action_verification_failed">Failed to send verification email</string>
    <string name="action_verify_email">Please verify your email</string>
    <string name="action_signed_out">Signed out</string>

    <!-- Strings relatedSettingsActivityings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Username</string>
    <string name="pref_default_display_name">Matt Task</string>
    <string name="pref_title_language">Language</string>
    <string-array name="pref_example_list_titles">
        <item>Suomi</item>
        <item>English</item>
        <item>Polska</item>
        <item>русский</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="text_changed_language_to">Changed language to </string>

    <!-- Help settings strings -->
    <string name="pref_header_help">Help</string>
    <string name="create_routine_title">Create Routine</string>
    <string name="create_routine_content">First you name the new routine. Then specify a category of your choosing. You can use an existing category or create a new one. \n\nAfter that define how many tasks the routine contains. If the routine contains only one task, choose “All of the tasks are the same”. \n\nThen define the duration of each task and write a description to the whole routine.
Click next and name the tasks of the routine and write descriptions.
</string>
    <string name="main_title">Main View</string>
    <string name="main_content">In the Main View you see the on going week’s tasks when you have set them to the calendar. \n\nYou can set the task’s state to done by holding it down and selecting OK. \n\nWhen in wherever else you can go back to Main View by pressing the arrow on the left top corner. \n\nTo create a new routine, click the + -button on the bottom right corner of the screen.</string>
    <string name="calendar_title">Calendar</string>
    <string name="calendar_content">In the calendar view you can see your ongoing week’s tasks and set the next week’s tasks to be accomplished. \n\nBy clicking a task, you can set the date and time and then the task will appear to calendar.</string>
    <string name="routine_title">Routines</string>
    <string name="routine_content">In the routines view you get to see existing routines and modify them. Routines are grouped to the categories you have created and separated by colours. \n\nBy clicking a category, you see the routines it contains and get to modify them. \n\nTo create a new routine, click the + -button on the bottom right corner of the screen.</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_content">In Notifications you can set Weekly Reminder. \n\nSet a week day and time when you want to plan following week’s timetable and place the tasks to the calendar.</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="prompt_loading">Loading...</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_weekly_reminder">Weekly reminder date</string>
    <string name="prompt_weekly_reminder_title">TaskiMatti\'s weekly reminder</string>
    <string name="prompt_weekly_reminder_content">Set your next week\'s tasks</string>


    <string-array name="notification_week_dates">
        <item>@string/day_monday</item>
        <item>@string/day_tuesday</item>
        <item>@string/day_wednesday</item>
        <item>@string/day_thursday</item>
        <item>@string/day_friday</item>
        <item>@string/day_saturday</item>
        <item>@string/day_sunday</item>
    </string-array>
    <string-array name="notification_week_date_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>1</item>
    </string-array>


    <!-- Week view -->
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">"TaskiMatti "</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="auth_success">Authentication successful</string>

    <!-- Create routine -->
    <string name="time_week">Week</string>
    <string name="time_month">Month</string>
    <string name="time_year">Year</string>
    <string name="time_hours">Hours</string>
    <string name="time_Minutes">Minutes</string>
    <string name="param_task">Task</string>
    <string name="error_less_than">Value less than</string>
    <string name="error_under_zero">Value less than zero</string>
    <string name="param_name">Name</string>
    <string name="param_type">Type</string>
    <string name="param_repeat">Repeat</string>
    <string name="param_frequency">Frequency</string>
    <string name="text_all_tasks_are_same">All of the tasks are the same</string>
    <string name="text_tasks_created">Tasks created</string>
    <string name="text_routine_created">Routine created successfully!</string>
    <string name="param_duration">Duration</string>
    <string name="param_description">Description</string>
    <string name="title_create_tasks">Create tasks</string>

    <!-- ShowRoutinesActivity -->
    <string name="action_save_changes">Save changes</string>
    <string name="action_delete">Delete</string>
    <string name="prompt_routine_removal">Routine removal</string>
    <string name="prompt_routine_removal_success">Routine removed</string>
    <string name="prompt_routine_removal_confirm">Are you sure you want to remove the routine?</string>
    <string name="prompt_routine_edit">Edit routine</string>
    <string name="prompt_routine_edit_confirm">Do you want to save the changes?</string>
    <string name="prompt_routine_edit_success">Changes saved</string>
    <string name="text_all">All</string>
    <string name="text_remove">Remove</string>
    <string name="text_no_routines">No routines yet…\nStart by creating one!</string>

    <!-- Main activity -->
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <!-- DayFragment -->
    <string name="time_time">Time</string>
    <string name="prompt_removal_confirm">Are you sure you want to remove </string>
    <string name="prompt_task_removal_success">Task removed</string>
    <string name="prompt_set_as_done">Set as done</string>
    <string name="prompt_set_task_as_done">Set task as done: </string>
    <string name="prompt_task_set_done">Task set as done </string>
    <string name="text_no_tasks_for_today">No tasks for today!</string>
    <string name="hint_create_routine">You can create a routine by pressing the \'+\' icon.</string>

    <!-- SetTaskAbstract -->
    <string name="text_no_tasks">No tasks to set</string>
    <string name="text_task_set_to">Task set to </string>
    <string name="prompt_task_edit">"Editing task "</string>
    <string name="prompt_edit_confirm">Are you sure you want to save the changes?</string>
    <string name="prompt_weekly_reminder">TaskiMatti\'s weekly reminder</string>
    <string name="prompt_task_edit_confirm">Do you want to save the changes?</string>
    <string name="prompt_task_edit_success">Task edited successfully!</string>
    <string name="error_cant_change_to_empty">Can\'t change to empty</string>
    <string name="title_task_name">Task name: </string>
    <string name="title_task_description">Task description: </string>

</resources>
