<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ryhma4.taskimatti.*">

    <item
        android:id="@+id/action_setTasks"
        android:orderInCategory="100"
        android:title="@string/action_calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_routines"
        android:orderInCategory="100"
        android:title="@string/action_routines"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signOut"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_settings"
        android:icon="@drawable/ic_help_white_24dp"
        android:title=""
        app:showAsAction="always">
    </item>
</menu>
