<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.example.ryhma4.taskimatti.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.ryhma4.taskimatti.activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.ryhma4.taskimatti.activity.SettingsActivity$HelpPreferenceFragment"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/pref_header_help" />

</preference-headers>